# src/main/scala/com/getjenny/starchat/serializers/JsonSupport.scala
@@ -48,13 +48,13 @@ trait JsonSupport extends SprayJsonSupport with DefaultJsonProtocol {
   implicit val responseRequestOutputFormat = jsonFormat13(ResponseRequestOut)
   implicit val dtDocumentFormat = jsonFormat13(DTDocument)
   implicit val dtDocumentUpdateFormat = jsonFormat12(DTDocumentUpdate)
-  implicit val kbDocumentFormat = jsonFormat14(QADocument)
+  implicit val kbDocumentFormat = jsonFormat15(QADocument)
   implicit val kbDocumentUpdateFormat = jsonFormat13(QADocumentUpdate)
   implicit val searchKBDocumentFormat = jsonFormat2(SearchQADocument)
   implicit val searchDTDocumentFormat = jsonFormat2(SearchDTDocument)
-  implicit val searchKBResultsFormat = jsonFormat3(SearchQADocumentsResults)
+  implicit val searchKBResultsFormat = jsonFormat4(SearchQADocumentsResults)
   implicit val searchDTResultsFormat = jsonFormat3(SearchDTDocumentsResults)
-  implicit val kbDocumentSearchFormat = jsonFormat16(QADocumentSearch)
+  implicit val kbDocumentSearchFormat = jsonFormat17(QADocumentSearch)
   implicit val dtDocumentSearchFormat = jsonFormat9(DTDocumentSearch)
   implicit val indexDocumentResultFormat = jsonFormat5(IndexDocumentResult)
   implicit val updateDocumentResultFormat = jsonFormat5(UpdateDocumentResult)
